--- a/FrontEndProject/package.json
+++ b/FrontEndProject/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "execall": "^3.0.0",
     "express": "^4.18.2",
     "jquery": "^3.6.1",
     "jsdom": "^20.0.3"
